deploy: 99e8d9e60a407ff422f38b8791ede9804bf0e135

--- a/2024-08-31-this-month-in-reactive-graph.html
+++ b/2024-08-31-this-month-in-reactive-graph.html
@@ -30,6 +30,8 @@
 
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="././book.css">
+        <link rel="stylesheet" href="././mdbook-admonish.css">
+        <link rel="stylesheet" href="././graphql-playground.css">
 
     </head>
     <body class="sidebar-visible no-js">
@@ -279,6 +281,10 @@
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="mermaid.min.js"></script>
+        <script src="mermaid-init.js"></script>
+        <script src="graphql-playground-react-middleware.js"></script>
+        <script src="graphql-playground.js"></script>
 
 
     </div>
