--- a/print.html
+++ b/print.html
@@ -31,6 +31,8 @@
 
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="././book.css">
+        <link rel="stylesheet" href="././mdbook-admonish.css">
+        <link rel="stylesheet" href="././graphql-playground.css">
 
     </head>
     <body class="sidebar-visible no-js">
@@ -212,6 +214,17 @@
 <li>Start work on the Type System Persistence</li>
 <li>Start work on the Identity and Permission System</li>
 </ul>
+<div id="admonition-homepage" class="admonition admonish-tip" role="note" aria-labelledby="admonition-homepage-title">
+<div class="admonition-title">
+<div id="admonition-homepage-title">
+<p>Homepage</p>
+</div>
+<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-homepage"></a>
+</div>
+<div>
+<p>https://this-month-in.reactive-graph.io/</p>
+</div>
+</div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="this-month-in-reactive-graph-2024-09-30-1"><a class="header" href="#this-month-in-reactive-graph-2024-09-30-1">This Month in Reactive Graph (2024-09-30)</a></h1>
 <h2 id="reactive-graph---graph-model-1"><a class="header" href="#reactive-graph---graph-model-1">Reactive Graph - Graph Model</a></h2>
 <ul>
@@ -249,6 +262,17 @@
 <li>Start work on the Type System Persistence</li>
 <li>Start work on the Identity and Permission System</li>
 </ul>
+<div id="admonition-homepage" class="admonition admonish-tip" role="note" aria-labelledby="admonition-homepage-title">
+<div class="admonition-title">
+<div id="admonition-homepage-title">
+<p>Homepage</p>
+</div>
+<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-homepage"></a>
+</div>
+<div>
+<p>https://this-month-in.reactive-graph.io/</p>
+</div>
+</div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="this-month-in-reactive-graph-2024-08-31"><a class="header" href="#this-month-in-reactive-graph-2024-08-31">This Month in Reactive Graph (2024-08-31)</a></h1>
 <h2 id="extended-the-rust-graphql-client-2"><a class="header" href="#extended-the-rust-graphql-client-2">Extended the Rust GraphQL Client</a></h2>
 <ul>
@@ -348,6 +372,10 @@
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="mermaid.min.js"></script>
+        <script src="mermaid-init.js"></script>
+        <script src="graphql-playground-react-middleware.js"></script>
+        <script src="graphql-playground.js"></script>
 
         <script>
         window.addEventListener('load', function() {
