--- a/2024-09-30-this-month-in-reactive-graph.html
+++ b/2024-09-30-this-month-in-reactive-graph.html
@@ -177,6 +177,17 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="this-month-in-reactive-graph-2024-09-30"><a class="header" href="#this-month-in-reactive-graph-2024-09-30">This Month in Reactive Graph (2024-09-30)</a></h1>
+<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
+<div class="admonition-title">
+<div id="admonition-work-in-progress-title">
+<p>Work in Progress</p>
+</div>
+<a class="admonition-anchor-link" href="#admonition-work-in-progress"></a>
+</div>
+<div>
+<p>This is not the final version of This Month in Reactive Graph</p>
+</div>
+</div>
 <h2 id="reactive-graph---graph-model"><a class="header" href="#reactive-graph---graph-model">Reactive Graph - Graph Model</a></h2>
 <ul>
 <li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
