--- a/print.html
+++ b/print.html
@@ -178,6 +178,17 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="this-month-in-reactive-graph-2024-09-30"><a class="header" href="#this-month-in-reactive-graph-2024-09-30">This Month in Reactive Graph (2024-09-30)</a></h1>
+<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
+<div class="admonition-title">
+<div id="admonition-work-in-progress-title">
+<p>Work in Progress</p>
+</div>
+<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-work-in-progress"></a>
+</div>
+<div>
+<p>This is not the final version of This Month in Reactive Graph</p>
+</div>
+</div>
 <h2 id="reactive-graph---graph-model"><a class="header" href="#reactive-graph---graph-model">Reactive Graph - Graph Model</a></h2>
 <ul>
 <li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
@@ -226,6 +237,17 @@
 </div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="this-month-in-reactive-graph-2024-09-30-1"><a class="header" href="#this-month-in-reactive-graph-2024-09-30-1">This Month in Reactive Graph (2024-09-30)</a></h1>
+<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
+<div class="admonition-title">
+<div id="admonition-work-in-progress-title">
+<p>Work in Progress</p>
+</div>
+<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-work-in-progress"></a>
+</div>
+<div>
+<p>This is not the final version of This Month in Reactive Graph</p>
+</div>
+</div>
 <h2 id="reactive-graph---graph-model-1"><a class="header" href="#reactive-graph---graph-model-1">Reactive Graph - Graph Model</a></h2>
 <ul>
 <li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
