deploy: 9d86333d0cbc778b46bbe035ff3880f689cbb3dd

--- a/2024-09-30-this-month-in-reactive-graph.html
+++ b/2024-09-30-this-month-in-reactive-graph.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>September - This Month in Reactive Graph</title>
+        <title>September 2024 in Reactive Graph - This Month in Reactive Graph</title>
 
 
         <!-- Custom HTML head -->
@@ -29,6 +29,32 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
+        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/patterns.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/text.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/brand.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/blockquote.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/lists.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/subtitle.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/tag.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/title.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/token.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/alert.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/article.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/card.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/emphasis-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/intro.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/list-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/logo.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/zebra-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/organisms/organisms.css">
         <link rel="stylesheet" href="././book.css">
         <link rel="stylesheet" href="././mdbook-admonish.css">
         <link rel="stylesheet" href="././graphql-playground.css">
@@ -91,7 +117,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.1.</strong> September</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,18 +202,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="this-month-in-reactive-graph-2024-09-30"><a class="header" href="#this-month-in-reactive-graph-2024-09-30">This Month in Reactive Graph (2024-09-30)</a></h1>
-<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
-<div class="admonition-title">
-<div id="admonition-work-in-progress-title">
-<p>Work in Progress</p>
+                        <div class="alert alert--error">
+    <h3 id="work-in-progress"><a class="header" href="#work-in-progress"><i class="ti ti-alert-triangle"></i> Work in progress!</a></h3>
+    <p class="rg-alert-body">This issue of This Month in Reactive Graph is still work in progress.</p>
 </div>
-<a class="admonition-anchor-link" href="#admonition-work-in-progress"></a>
-</div>
-<div>
-<p>This is not the final version of This Month in Reactive Graph</p>
-</div>
-</div>
+<section class="rg-emphasis-box">
+    <h3 class="">This Month in Reactive Graph! <span class="tag rg-component">September 2024</span></h3>
+    <p class="intro">Hello and welcome to another issue of This Month in Reactive Graph! Reactive Graph is a runtime empowering everyone to build reliable and efficient software. This is a monthly summary of its progress and community. Want something mentioned? Send us a pull request. Want to get involved? We love contributions.</p>
+    <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
+</section>
 <h2 id="reactive-graph---graph-model"><a class="header" href="#reactive-graph---graph-model">Reactive Graph - Graph Model</a></h2>
 <ul>
 <li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
@@ -240,11 +263,11 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="2024-09-30-this-month-in-reactive-graph.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="2024.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="2024-09-30-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -254,11 +277,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="2024-09-30-this-month-in-reactive-graph.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="2024.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="2024-09-30-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
