--- a/404.html
+++ b/404.html
@@ -30,6 +30,32 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
+        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/patterns.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/text.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/brand.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/blockquote.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/lists.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/subtitle.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/tag.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/title.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/token.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/alert.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/article.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/card.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/emphasis-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/intro.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/list-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/logo.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/zebra-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/organisms/organisms.css">
         <link rel="stylesheet" href="././book.css">
         <link rel="stylesheet" href="././mdbook-admonish.css">
         <link rel="stylesheet" href="././graphql-playground.css">
@@ -92,7 +118,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
