--- a/print.html
+++ b/print.html
@@ -30,6 +30,32 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
+        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/patterns.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/text.css">
+        <link rel="stylesheet" href="./src/design/public/css/variables/brand.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/blockquote.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/lists.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/subtitle.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/surface.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/tag.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/title.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/token.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/alert.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/article.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/card.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/emphasis-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/intro.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/list-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/logo.css">
+        <link rel="stylesheet" href="./src/design/public/css/molecules/zebra-box.css">
+        <link rel="stylesheet" href="./src/design/public/css/organisms/organisms.css">
         <link rel="stylesheet" href="././book.css">
         <link rel="stylesheet" href="././mdbook-admonish.css">
         <link rel="stylesheet" href="././graphql-playground.css">
@@ -92,7 +118,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -177,18 +203,25 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="this-month-in-reactive-graph-2024-09-30"><a class="header" href="#this-month-in-reactive-graph-2024-09-30">This Month in Reactive Graph (2024-09-30)</a></h1>
-<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
-<div class="admonition-title">
-<div id="admonition-work-in-progress-title">
-<p>Work in Progress</p>
+                        <section class="rg-emphasis-box">
+    <h3 class="">This Month in Reactive Graph! <span class="tag rg-component">2024</span></h3>
+    <p class="intro">Reactive Graph is a runtime empowering everyone to build reliable and efficient software. This is a monthly summary of its progress and community. Want something mentioned? Send us a pull request. Want to get involved? We love contributions.</p>
+    <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
+</section>
+<h2 id="topics"><a class="header" href="#topics">Topics</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>Issue</th><th>Topics</th></tr></thead><tbody>
+<tr><td><a href="./2024-09-30-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
+<tr><td><a href="./2024-09-30-this-month-in-reactive-graph.html">September 2024</a></td><td>Manage Instance System via Command Line Interface, Replacing OpenSSL with rustls</td></tr>
+</tbody></table>
+</div><div style="break-before: page; page-break-before: always;"></div><div class="alert alert--error">
+    <h3 id="work-in-progress"><a class="header" href="#work-in-progress"><i class="ti ti-alert-triangle"></i> Work in progress!</a></h3>
+    <p class="rg-alert-body">This issue of This Month in Reactive Graph is still work in progress.</p>
 </div>
-<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-work-in-progress"></a>
-</div>
-<div>
-<p>This is not the final version of This Month in Reactive Graph</p>
-</div>
-</div>
+<section class="rg-emphasis-box">
+    <h3 class="">This Month in Reactive Graph! <span class="tag rg-component">September 2024</span></h3>
+    <p class="intro">Hello and welcome to another issue of This Month in Reactive Graph! Reactive Graph is a runtime empowering everyone to build reliable and efficient software. This is a monthly summary of its progress and community. Want something mentioned? Send us a pull request. Want to get involved? We love contributions.</p>
+    <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
+</section>
 <h2 id="reactive-graph---graph-model"><a class="header" href="#reactive-graph---graph-model">Reactive Graph - Graph Model</a></h2>
 <ul>
 <li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
@@ -236,67 +269,12 @@
 <p>https://this-month-in.reactive-graph.io/</p>
 </div>
 </div>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="this-month-in-reactive-graph-2024-09-30-1"><a class="header" href="#this-month-in-reactive-graph-2024-09-30-1">This Month in Reactive Graph (2024-09-30)</a></h1>
-<div id="admonition-work-in-progress" class="admonition admonish-note" role="note" aria-labelledby="admonition-work-in-progress-title">
-<div class="admonition-title">
-<div id="admonition-work-in-progress-title">
-<p>Work in Progress</p>
-</div>
-<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-work-in-progress"></a>
-</div>
-<div>
-<p>This is not the final version of This Month in Reactive Graph</p>
-</div>
-</div>
-<h2 id="reactive-graph---graph-model-1"><a class="header" href="#reactive-graph---graph-model-1">Reactive Graph - Graph Model</a></h2>
-<ul>
-<li>Non-Reactive EntityInstance and RelationInstance now contains the applied components</li>
-<li>This is useful for exporting and importing reactive instances as they may have got additional components</li>
-<li>Additionally, the GraphQL Client and the CLI can query and list the applied components of reactive instances</li>
-</ul>
+<div style="break-before: page; page-break-before: always;"></div><section class="rg-emphasis-box">
+    <h3 class="">This Month in Reactive Graph! <span class="tag rg-component">August 2024</span></h3>
+    <p class="intro">Hello and welcome to another issue of This Month in Reactive Graph! Reactive Graph is a runtime empowering everyone to build reliable and efficient software. This is a monthly summary of its progress and community. Want something mentioned? Send us a pull request. Want to get involved? We love contributions.</p>
+    <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
+</section>
 <h2 id="extended-the-rust-graphql-client-1"><a class="header" href="#extended-the-rust-graphql-client-1">Extended the Rust GraphQL Client</a></h2>
-<ul>
-<li>Finished the implementation of managing the instance system (entity instances and relation instances)</li>
-<li>Extended the type system search functionality</li>
-</ul>
-<h2 id="extended-the-command-line-interface-1"><a class="header" href="#extended-the-command-line-interface-1">Extended the Command Line Interface</a></h2>
-<ul>
-<li>Finished the implementation of managing the instance system via CLI (entity instances and relation instances)</li>
-<li>With the new --output-format=count you can return the number of results instead of the actual data</li>
-<li>Book: Documented the command line interface using auto-generated markdown that uses the help system of the CLI</li>
-</ul>
-<h2 id="rustls-replaces-openssl-1"><a class="header" href="#rustls-replaces-openssl-1">rustls replaces OpenSSL</a></h2>
-<ul>
-<li>Finished work on replacing OpenSSL with rustls. OpenSSL is no more needed to build reactive graph.</li>
-</ul>
-<h2 id="continuous-modernization-1"><a class="header" href="#continuous-modernization-1">Continuous Modernization</a></h2>
-<ul>
-<li>Upgraded to nightly-YYYY-MM-DD</li>
-<li>We plan to pin the nightly version every six weeks (in sync with stable rust)</li>
-</ul>
-<h2 id="documentation-1"><a class="header" href="#documentation-1">Documentation</a></h2>
-<ul>
-<li>Added</li>
-</ul>
-<h2 id="goals-for-october-2024-1"><a class="header" href="#goals-for-october-2024-1">Goals for October 2024</a></h2>
-<p>(highest priority on top)</p>
-<ul>
-<li>Start work on the Type System Persistence</li>
-<li>Start work on the Identity and Permission System</li>
-</ul>
-<div id="admonition-homepage" class="admonition admonish-tip" role="note" aria-labelledby="admonition-homepage-title">
-<div class="admonition-title">
-<div id="admonition-homepage-title">
-<p>Homepage</p>
-</div>
-<a class="admonition-anchor-link" href="2024-09-30-this-month-in-reactive-graph.html#admonition-homepage"></a>
-</div>
-<div>
-<p>https://this-month-in.reactive-graph.io/</p>
-</div>
-</div>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="this-month-in-reactive-graph-2024-08-31"><a class="header" href="#this-month-in-reactive-graph-2024-08-31">This Month in Reactive Graph (2024-08-31)</a></h1>
-<h2 id="extended-the-rust-graphql-client-2"><a class="header" href="#extended-the-rust-graphql-client-2">Extended the Rust GraphQL Client</a></h2>
 <ul>
 <li>This step is important to make Reactive Graph more useful and accessible, since it allows to access the Reactive Graph programmatically from an independent rust process by simply using the rust GraphQL client crate</li>
 <li>Also, the rust GraphQL client is the foundation for the command line interface (see below)</li>
@@ -306,7 +284,7 @@
 <li>Started the implementation of the instance system (managing entity instances and relation instances)</li>
 <li>Decided to defer work on the flow types and flow instances till instance system has been fully implemented</li>
 </ul>
-<h2 id="extended-the-command-line-interface-2"><a class="header" href="#extended-the-command-line-interface-2">Extended the Command Line Interface</a></h2>
+<h2 id="extended-the-command-line-interface-1"><a class="header" href="#extended-the-command-line-interface-1">Extended the Command Line Interface</a></h2>
 <ul>
 <li>Implemented a generic way of presenting the output in table format, as JSON and as TOML</li>
 <li>This allows to use the Reactive Graph CLI as tool for exporting types and instances</li>
@@ -327,7 +305,7 @@
 <li>Patched the gql-client crate for rustls support</li>
 <li>Waiting for a PR in aws-lc-rs to be merged (https://github.com/aws/aws-lc-rs/pull/491) since aws-lc-rs requires NASM</li>
 </ul>
-<h2 id="continuous-modernization-2"><a class="header" href="#continuous-modernization-2">Continuous Modernization</a></h2>
+<h2 id="continuous-modernization-1"><a class="header" href="#continuous-modernization-1">Continuous Modernization</a></h2>
 <ul>
 <li>Fixed a bunch of new clippy lints</li>
 <li>Upgraded to builds to latest nightly</li>
