--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-30-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -209,8 +209,7 @@
 </section>
 <h2 id="topics"><a class="header" href="#topics">Topics</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Issue</th><th>Topics</th></tr></thead><tbody>
-<tr><td><a href="./2024-09-30-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
-<tr><td><a href="./2024-09-30-this-month-in-reactive-graph.html">September 2024</a></td><td>Manage Instance System via Command Line Interface, Replacing OpenSSL with rustls</td></tr>
+<tr><td><a href="./2024-08-31-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
 </tbody></table>
 </div>
                     </main>
@@ -218,7 +217,7 @@
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="2024-09-30-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -229,7 +228,7 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="2024-09-30-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
