--- a/print.html
+++ b/print.html
@@ -9,7 +9,7 @@
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="">
+        <meta name="description" content="This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at https://this-month-in.reactive-graph.io">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -429,6 +429,20 @@ step we <span class="token rg-component">specified the requirements and the data
 <li>Start work on the Identity and Permission System</li>
 <li>Specify the Type System Persistence (<span class="token rg-component">Graph Relational Mapper</span>)</li>
 </ol>
+<hr />
+<footer>
+    <div class="card card--default">
+    </div>
+    <div class="card card--default">
+    </div>
+    <div class="card card--default">
+    </div>
+    <div class="card card--default">
+        <h5 id="rss-feed"><a class="header" href="#rss-feed"><a href="/rss.xml">RSS Feed</a></a></h5>
+    </div>
+    <div class="card card--default">
+    </div>
+</footer>
 
                     </main>
 
