--- a/print.html
+++ b/print.html
@@ -432,15 +432,67 @@ step we <span class="token rg-component">specified the requirements and the data
 <hr />
 <footer>
     <div class="card card--default">
+        <div class="rg-icon-grid">
+            <div></div>
+            <div>
+                <a href="/-this-month-in-reactive-graph.html" title="Previous Issue ()">
+                    <img src="images/caret-left.svg" alt="Next issue ()">
+                </a>
+            </div>
+            <div></div>
+        </div>
     </div>
     <div class="card card--default">
+        <div class="rg-icon-grid-1">
+            <div></div>
+            <div>
+                <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io">
+                    <img src="design/public/logo/full/reactive-graph-full-mexican-pink-black_512.png" alt="www.reactive-graph.io" class="rg-icon-logo">
+                </a>
+            </div>
+            <div></div>
+        </div>
     </div>
     <div class="card card--default">
+        <div class="rg-icon-grid">
+            <div></div>
+            <div>
+                <a href="/rss.xml" title="RSS Feed">
+                    <img src="images/rss.svg" alt="RSS Feed">
+                </a>
+            </div>
+            <div></div>
+        </div>
     </div>
     <div class="card card--default">
-        <h5 id="rss-feed"><a class="header" href="#rss-feed"><a href="/rss.xml">RSS Feed</a></a></h5>
+        <div class="rg-icon-grid">
+            <div>
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                    <img src="images/cc.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                </a>
+            </div>
+            <div>
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                    <img src="images/by.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                </a>
+            </div>
+            <div>
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                    <img src="images/sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card card--default">
+        <div class="rg-icon-grid">
+            <div></div>
+            <div>
+                <a href="/2024-09-30-this-month-in-reactive-graph.html" title="Next Issue (2024-09-30)">
+                    <img src="images/caret-right.svg" alt="Next issue (2024-09-30)">
+                </a>
+            </div>
+            <div></div>
+        </div>
     </div>
 </footer>
 
