deploy: d9f381caa7e02925c6c0c369602b599ecf5fe362

--- a/2024-08-31-this-month-in-reactive-graph.html
+++ b/2024-08-31-this-month-in-reactive-graph.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light" dir="ltr">
+<html lang="en" class="theme" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -14,6 +14,10 @@
 
         <link rel="icon" href="favicon.svg">
         <link rel="shortcut icon" href="favicon.png">
+        <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
+        <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
+        <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
@@ -65,7 +69,7 @@
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "";
-            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
+            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "theme" : "theme";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
@@ -90,7 +94,7 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
-            html.classList.remove('light')
+            html.classList.remove('theme')
             html.classList.add(theme);
             var body = document.querySelector('body');
             body.classList.remove('no-js')
@@ -116,6 +120,45 @@
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
+            <div class="sidebar-header">
+                <h3>
+                    <img src="design/public/logo/full/reactive-graph-full-black.svg" alt="This Month in Reactive Graph!" class="sidebar-logo">
+                </h3>
+            </div>
+            <div class="sidebar-footer">
+                <div class="rg-icon-grid">
+                    <div>
+                        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                            <img src="images/creative-commons.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                            <img src="images/creative-commons-by.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+                            <img src="images/creative-commons-sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="/rss.xml" title="RSS Feed">
+                            <img src="images/rss.svg" alt="RSS Feed">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph" title="Git repository" aria-label="Git repository">
+                            <img src="images/brand-github.svg" alt="Git repository">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <img src="images/pencil.svg" alt="Git repository">
+                        </a>
+                    </div>
+                </div>
+            </div>
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.1.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
@@ -155,16 +198,16 @@
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
                         </label>
-                        <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
-                            <i class="fa fa-paint-brush"></i>
-                        </button>
-                        <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
-                        </ul>
+<!--                        <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">-->
+<!--                            <i class="fa fa-paint-brush"></i>-->
+<!--                        </button>-->
+<!--                        <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">-->
+<!--                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>-->
+<!--                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>-->
+<!--                            <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>-->
+<!--                            <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>-->
+<!--                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>-->
+<!--                        </ul>-->
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
                         </button>
@@ -175,6 +218,12 @@
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
+                        </a>
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph" title="Git repository" aria-label="Git repository">
+                            <i id="git-repository-button" class="fa fa-github"></i>
+                        </a>
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
                     </div>
