deploy: 14345a80f8bd1f6e1b0bf91ca9676dc5ade1c019

--- a/print.html
+++ b/print.html
@@ -259,6 +259,24 @@
     <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
 </section>
 <hr />
+<h2 id="table-of-contents"><a class="header" href="#table-of-contents">Table of Contents</a></h2>
+<ul>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#extended-the-rust-graphql-client">Extended the Rust GraphQL Client</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#extended-the-command-line-interface">Extended the Command Line Interface</a>
+<ul>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#manage-type-system-via-cli">Manage Type System via CLI</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#output-format-table">Output Format Table</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#output-format-json">Output Format JSON</a></li>
+</ul>
+</li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#replacing-openssl-with-rustls">Replacing OpenSSL with rustls</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#continuous-modernization">Continuous Modernization</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#java-graphql-client">Java GraphQL Client</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#poc-wasm--wasi">POC WASM / WASI</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#identity-and-permission-system">Identity and Permission System</a></li>
+<li><a href="2024-08-31-this-month-in-reactive-graph.html#goals-for-september-2024">Goals for September 2024</a></li>
+</ul>
+<hr />
 <h2 id="extended-the-rust-graphql-client"><a class="header" href="#extended-the-rust-graphql-client">Extended the <span class="token rg-component">Rust GraphQL Client</span></a></h2>
 <p>The Rust GraphQL Client is important to make Reactive Graph more useful and accessible. It allows to access the Reactive Graph programmatically by simply
 using the crate <code>reactive-graph-client</code>. The client crate is the foundation for the command line interface and for rust applications.</p>
