deploy: 966e739970522529253d6d0f487eeb84de06f3a8

--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@
         <link rel="stylesheet" href="./src/design/public/css/variables/text.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/brand.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/blockquote.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/hr.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/lists.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/subtitle.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/surface.css">
