--- a/print.html
+++ b/print.html
@@ -45,6 +45,7 @@
         <link rel="stylesheet" href="./src/design/public/css/variables/text.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/brand.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/blockquote.css">
+        <link rel="stylesheet" href="./src/design/public/css/atoms/hr.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/lists.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/subtitle.css">
         <link rel="stylesheet" href="./src/design/public/css/atoms/surface.css">
@@ -258,7 +259,7 @@
     <p class="intro">Hello and welcome to another issue of This Month in Reactive Graph! Reactive Graph is a runtime empowering everyone to build reliable and efficient software. This is a monthly summary of its progress and community. Want something mentioned? Send us a pull request. Want to get involved? We love contributions.</p>
     <p>This Month in Reactive Graph is openly developed on GitHub and archives can be viewed at <a href="https://this-month-in.reactive-graph.io/">this-month-in.reactive-graph.io</a>. If you find any errors in this month's issue, please submit a PR.</p>
 </section>
-<hr />
+<hr class="surface-2">
 <h2 id="table-of-contents"><a class="header" href="#table-of-contents">Table of Contents</a></h2>
 <ul>
 <li><a href="2024-08-31-this-month-in-reactive-graph.html#extended-the-rust-graphql-client">Extended the Rust GraphQL Client</a></li>
@@ -276,7 +277,7 @@
 <li><a href="2024-08-31-this-month-in-reactive-graph.html#identity-and-permission-system">Identity and Permission System</a></li>
 <li><a href="2024-08-31-this-month-in-reactive-graph.html#goals-for-september-2024">Goals for September 2024</a></li>
 </ul>
-<hr />
+<hr class="surface-2">
 <h2 id="extended-the-rust-graphql-client"><a class="header" href="#extended-the-rust-graphql-client">Extended the <span class="token rg-component">Rust GraphQL Client</span></a></h2>
 <p>The Rust GraphQL Client is important to make Reactive Graph more useful and accessible. It allows to access the Reactive Graph programmatically by simply
 using the crate <code>reactive-graph-client</code>. The client crate is the foundation for the command line interface and for rust applications.</p>
@@ -310,12 +311,15 @@ system has been fully implemented.</p>
         RC2 --&gt; G
     end
 </pre>
-<hr />
+<hr class="celestial-blue">
 <h2 id="extended-the-command-line-interface"><a class="header" href="#extended-the-command-line-interface">Extended the <span class="token rg-component">Command Line Interface</span></a></h2>
 <p>The command line interface made big progress.</p>
 <h3 id="manage-type-system-via-cli"><a class="header" href="#manage-type-system-via-cli">Manage Type System via CLI</a></h3>
-<pre><code class="language-shell">➜  reactive-graph client entity-types get string title_case                                                        
-╔════════════════════════╦════════════════════════╦══════════════════════════════════╦══════════════════════════════════════╦══════════════════════════════════════════════════════════════════════════════╦════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+<pre><code class="language-shell">➜ reactive-graph client entity-types get string title_case                                                        
+</code></pre>
+<details>
+<summary>Command Output</summary>
+<pre><code class="language-shell">╔════════════════════════╦════════════════════════╦══════════════════════════════════╦══════════════════════════════════════╦══════════════════════════════════════════════════════════════════════════════╦════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
 ║ namespace              ║ name                   ║ description                      ║ components                           ║ properties                                                                   ║ extensions                                                                                                         ║
 ╠════════════════════════╬════════════════════════╬══════════════════════════════════╬══════════════════════════════════════╬══════════════════════════════════════════════════════════════════════════════╬════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
 ║ string                 ║ title_case             ║ Converts the input to title case ║  namespace       │ name              ║  name                                │ data_type │ socket_type │ mutability  ║  namespace              │ name                   │ description │ extension                                         ║
@@ -329,10 +333,18 @@ system has been fully implemented.</p>
 ║                        ║                        ║                                  ║                                      ║                                                                              ║                         │                        │             │ }                                                 ║
 ╚════════════════════════╩════════════════════════╩══════════════════════════════════╩══════════════════════════════════════╩══════════════════════════════════════════════════════════════════════════════╩════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
 </code></pre>
-<p>With the new parameter <code>--output-format</code> it is possible to output the data in table format (default), or as JSON or as TOML:</p>
+</details>
 <h3 id="output-format-table"><a class="header" href="#output-format-table">Output Format Table</a></h3>
-<pre><code class="language-shell">➜  reactive-graph client entity-instances list-properties 6ba7b810-9e15-11d1-50b4-00c04fd530c7
-╔════════════╦═════════════════════════════════════════════════════════════════════════════════════════════════════╗
+<p>With the new parameter <code>--output-format</code> it is possible to output the data in table format (default), or as JSON or as TOML.</p>
+<p>You can explicitly define the output format is table:</p>
+<pre><code class="language-shell">➜ reactive-graph client entity-instances list-properties 6ba7b810-9e15-11d1-50b4-00c04fd530c7 --output-format=table
+</code></pre>
+<p>Or you can just omit the option, because table is the default output format:</p>
+<pre><code class="language-shell">➜ reactive-graph client entity-instances list-properties 6ba7b810-9e15-11d1-50b4-00c04fd530c7
+</code></pre>
+<details>
+<summary>Command Output</summary>
+<pre><code class="language-shell">╔════════════╦═════════════════════════════════════════════════════════════════════════════════════════════════════╗
 ║ name       ║ value                                                                                               ║
 ╠════════════╬═════════════════════════════════════════════════════════════════════════════════════════════════════╣
 ║ args       ║ [{"help":"Delay shutdown by N seconds","long":"delay","name":"delay","required":false,"short":"d"}] ║
@@ -354,9 +366,15 @@ system has been fully implemented.</p>
 ║ help       ║ "Shutdown the application"                                                                          ║
 ╚════════════╩═════════════════════════════════════════════════════════════════════════════════════════════════════╝
 </code></pre>
+</details>
 <h3 id="output-format-json"><a class="header" href="#output-format-json">Output Format JSON</a></h3>
+<p>Additionally to the output format table, two new output formats have been implemented <code>json</code> and <code>toml</code>. This allows
+to use the Reactive Graph CLI as tool for exporting types and instances.</p>
 <pre><code class="language-shell">➜ reactive-graph client entity-instances list-properties 6ba7b810-9e15-11d1-50b4-00c04fd530c7 --output-format=json
-[
+</code></pre>
+<details>
+<summary>Command Output</summary>
+<pre><code class="language-shell">[
   {
     "name": "help",
     "value": "Shutdown the application"
@@ -403,11 +421,11 @@ system has been fully implemented.</p>
   }
 ]
 </code></pre>
-<p>This allows to use the Reactive Graph CLI as tool for exporting types and instances. Also, it allows to use the CLI
-as stdin for other CLI programs by using shell pipes. For example:</p>
-<pre><code class="language-shell">reactive-graph client entity-type get UUID --output-format=JSON | less
+</details>
+<p>Also, it allows to use the CLI as stdin for other CLI programs by using shell pipes. For example:</p>
+<pre><code class="language-shell">reactive-graph client entity-type get namespace type_name --output-format=JSON | less
 </code></pre>
-<hr />
+<hr class="celestial-blue">
 <h2 id="replacing-openssl-with-rustls"><a class="header" href="#replacing-openssl-with-rustls">Replacing OpenSSL with <span class="token rg-component">rustls</span></a></h2>
 <ul>
 <li>Started work on replacing OpenSSL with rustls</li>
@@ -415,7 +433,7 @@ as stdin for other CLI programs by using shell pipes. For example:</p>
 <li>Patched the gql-client crate for rustls support</li>
 <li>Waiting for a PR in aws-lc-rs to be merged (https://github.com/aws/aws-lc-rs/pull/491) since aws-lc-rs requires NASM on windows and this breaks the CI</li>
 </ul>
-<hr />
+<hr class="celestial-blue">
 <h2 id="continuous-modernization"><a class="header" href="#continuous-modernization">Continuous Modernization</a></h2>
 <ul>
 <li>Fixed a bunch of <span class="token rg-component">clippy lints</span></li>
@@ -424,7 +442,7 @@ as stdin for other CLI programs by using shell pipes. For example:</p>
 <li>We are not quite happy that windows builds needs more than an hour and mac builds more than three hours, so we <span class="token rg-component">added another layer of cache</span> to speed up the CI</li>
 <li><span class="token rg-component">Pinned the nightly version</span> in order to make caching in the CI more effective</li>
 </ul>
-<hr />
+<hr class="celestial-blue">
 <h2 id="java-graphql-client"><a class="header" href="#java-graphql-client"><span class="token rg-component">Java</span> GraphQL Client</a></h2>
 <ul>
 <li>The goal was to show that it's possible to manage the Reactive Graph <span class="token rg-component">from a programming language other than Rust</span></li>
@@ -467,19 +485,19 @@ as stdin for other CLI programs by using shell pipes. For example:</p>
 </pre>
 <p>As you can see, thanks to the <span class="token rg-component">GraphQL API</span> it is possible to build applications
 in different programming languages.</p>
-<hr />
+<hr class="celestial-blue">
 <h2 id="poc-wasm--wasi"><a class="header" href="#poc-wasm--wasi">POC WASM / WASI</a></h2>
 <p>We implemented a <a href="https://github.com/reactive-graph/poc-wasm-wasi-preview-2-plugin-system">POC</a> to check the current status of WASM. WASM will be an important
 part of the Reactive Graph. One use case is that the Reactive Graph could use WASM to load plugins written in "any" language that compiles to WASM. Another use
 case is that the Reactive Graph could use WASM to load behaviours for reactive entities or reactive relations. The POC showed that it now possible to interop
 with more complex data than primitive data types like integers.</p>
-<hr />
+<hr class="celestial-blue">
 <h2 id="identity-and-permission-system"><a class="header" href="#identity-and-permission-system">Identity and Permission System</a></h2>
 <p>Currently, Reactive Graph lacks an <span class="token rg-component">Identity and Permission System</span>. One of the next steps will be to implement it. We decided to not use an existing framework.
 The type system has to be threatened a bit different from the instance system. Also, the permission system is more complex for the instance system. In a first
 step we <span class="token rg-component">specified the requirements and the data model</span> of the upcoming identity management and the permission system
 (https://github.com/reactive-graph/reactive-graph/issues/26).</p>
-<hr />
+<hr class="celestial-blue">
 <h2 id="goals-for-september-2024"><a class="header" href="#goals-for-september-2024">Goals for September 2024</a></h2>
 <p>(highest priority on top)</p>
 <ol>
@@ -488,7 +506,25 @@ step we <span class="token rg-component">specified the requirements and the data
 <li>Start work on the Identity and Permission System</li>
 <li>Specify the Type System Persistence (<span class="token rg-component">Graph Relational Mapper</span>)</li>
 </ol>
-<hr />
+<hr class="surface-2">
+<div class="surface-2 rad-shadow rg-icon-grid">
+    <div>
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+            <img src="images/creative-commons.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+        </a>
+    </div>
+    <div>
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+            <img src="images/creative-commons-by.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+        </a>
+    </div>
+    <div>
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
+            <img src="images/creative-commons-sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
+        </a>
+    </div>
+</div>
+<hr class="surface-2">
 <footer>
     <div class="card card--default">
         <div class="rg-icon-grid">
