deploy: 6bb32279662272ffe42221a18be396a1ec2f0118

--- a/2024-08-31-this-month-in-reactive-graph.html
+++ b/2024-08-31-this-month-in-reactive-graph.html
@@ -144,13 +144,23 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/rss.xml" title="RSS Feed">
-                            <img src="images/rss.svg" alt="RSS Feed">
+                        <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
+                            <img src="images/brand-github.svg" alt="Git repository">
                         </a>
                     </div>
                     <div>
-                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Git repository">
+                        <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
+                            <img src="images/brand-youtube.svg" alt="YouTube">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
+                            <img src="images/brand-facebook.svg" alt="Facebook">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="/rss.xml" title="RSS Feed">
+                            <img src="images/rss.svg" alt="RSS Feed">
                         </a>
                     </div>
                     <div>
@@ -212,8 +222,14 @@
                         <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io" aria-label="www.reactive-graph.io">
                             <img src="design/public/logo/circle/reactive-graph-circle-white.svg" alt="www.reactive-graph.io" class="right-buttons-logo">
                         </a>
-                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Search" style="filter: invert(1);">
+                        <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
+                            <img src="images/brand-github.svg" alt="Git repository" style="filter: invert(1);">
+                        </a>
+                        <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
+                            <img src="images/brand-youtube.svg" alt="YouTube" style="filter: invert(1);">
+                        </a>
+                        <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
+                            <img src="images/brand-facebook.svg" alt="Facebook" style="filter: invert(1);">
                         </a>
                         <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <img src="images/pencil.svg" alt="Search" style="filter: invert(1);">
