deploy: 9d56141b585458f6da5236c48d6c54fb48e9de21

--- a/2024-08-31-this-month-in-reactive-graph.html
+++ b/2024-08-31-this-month-in-reactive-graph.html
@@ -123,7 +123,7 @@
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-header">
                 <h3>
-                    <img src="design/public/logo/full/reactive-graph-full-black.svg" alt="This Month in Reactive Graph!" class="sidebar-logo">
+                    <img src="design/public/logo/rendered/mexican-pink/reactive-graph-200x200.png" alt="This Month in Reactive Graph!" class="sidebar-logo">
                 </h3>
             </div>
             <div class="sidebar-footer">
@@ -207,10 +207,10 @@
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
-                            <img src="images/menu-2.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/menu-2.svg" alt="Search" class="rg-header-icons">
                         </label>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
-                            <img src="images/search.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/search.svg" alt="Search" class="rg-header-icons">
                         </button>
                     </div>
 
@@ -220,19 +220,19 @@
 
                     <div class="right-buttons">
                         <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io" aria-label="www.reactive-graph.io">
-                            <img src="design/public/logo/circle/reactive-graph-circle-white.svg" alt="www.reactive-graph.io" class="right-buttons-logo">
+                            <img src="design/public/logo/mono/reactive-graph-black.svg" alt="www.reactive-graph.io" class="rg-header-icons right-buttons-logo">
                         </a>
                         <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Git repository" style="filter: invert(1);">
+                            <img src="images/brand-github.svg" alt="Git repository" class="rg-header-icons">
                         </a>
                         <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
-                            <img src="images/brand-youtube.svg" alt="YouTube" style="filter: invert(1);">
+                            <img src="images/brand-youtube.svg" alt="YouTube" class="rg-header-icons">
                         </a>
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
-                            <img src="images/brand-facebook.svg" alt="Facebook" style="filter: invert(1);">
+                            <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
                         </a>
                         <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
-                            <img src="images/pencil.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/pencil.svg" alt="Search" class="rg-header-icons">
                         </a>
 
                     </div>
